fixed selectable parameters table shifting contents on row selection

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/parameter-provider.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/parameter-provider.css
@@ -317,7 +317,11 @@ span.parameter-provider-referencing-component-name {
 }
 
 #selectable-parameters-table .slick-cell-checkboxsel {
-    padding: 2px 4px 4px 4px;
+    padding: 1px 2px 5px 4px;
+}
+
+#selectable-parameters-table .slick-cell-checkboxsel.selected {
+    padding: 0px 2px 6px 4px;
 }
 
 #selectable-parameters-table .slick-column-name input {
@@ -352,7 +356,7 @@ span.parameter-provider-referencing-component-name {
     clip-path: polygon(0% -16%, 50% -16%, 50% 104%, 0% 104%);
     position: absolute;
     margin-left: 1px;
-    margin-top: 2px;
+    margin-top: 3px;
 }
 
 #selectable-parameters-table input[checked="checked"]:before {
@@ -360,7 +364,7 @@ span.parameter-provider-referencing-component-name {
     cursor: pointer;
     clip-path: polygon(50% -16%, 100% -16%, 100% 116%, 50% 116%);
     margin-left: -11px;
-    margin-top: 1px;
+    margin-top: 3px;
 }
 
 #selectable-parameters-table input[type="checkbox"].disabled:before {
@@ -370,7 +374,7 @@ span.parameter-provider-referencing-component-name {
     clip-path: polygon(0% -16%, 50% -16%, 50% 104%, 0% 104%);
     position: absolute;
     margin-left: 1px;
-    margin-top: 2px;
+    margin-top: 3px;
 }
 
 #selectable-parameters-table input[checked="checked"].disabled:before {
@@ -379,7 +383,7 @@ span.parameter-provider-referencing-component-name {
     cursor: not-allowed;
     clip-path: polygon(50% -16%, 100% -16%, 100% 116%, 50% 116%);
     margin-left: -11px;
-    margin-top: 1px;
+    margin-top: 3px;
 }
 
 #parameter-groups-table .slick-pane-top .slick-viewport-top .grid-canvas-top,
